
SUBDIRS = rp rpxl xlsdk Examples

EXTRA_DIST = \
    Announce.txt \
    Authors.txt \
    autogen.sh \
    Contributors.txt \
    LICENSE.TXT \
    NEWS.txt \
    reposit.nsi \
    reposit_vc8.sln \
    reposit_vc9.sln \
    reposit_vc10.sln \
    reposit_vc11.sln \
    reposit_vc12.sln \
    rplib_vc8.vcproj \
    rplib_vc9.vcproj \
    rplib_vc10.vcxproj \
    rplib_vc10.vcxproj.filters \
    rplib_vc11.vcxproj \
    rplib_vc11.vcxproj.filters \
    rplib_vc12.vcxproj \
    rplib_vc12.vcxproj.filters \
    README.txt \
    TODO.txt

#.PHONY: docs docs-online docs-dist docs-clean
#BASEPATH = @abs_top_srcdir@
#docs:
#	BASEPATH=$(BASEPATH) $(MAKE) -C Docs docs-all
#html-local:
#	BASEPATH=$(BASEPATH) $(MAKE) -C Docs docs-html
#docs-dist:
#	BASEPATH=$(BASEPATH) $(MAKE) -C Docs docs-dist
#docs-online:
#	BASEPATH=$(BASEPATH) $(MAKE) -C Docs docs-online
#docs-online-dist:
#	BASEPATH=$(BASEPATH) $(MAKE) -C Docs docs-online-dist
#docs-clean:
#	$(MAKE) -C Docs docs-clean

