
SUBDIRS = rp rpxl xlsdk Examples

EXTRA_DIST = \
    Announce.txt \
    Authors.txt \
    autogen.sh \
    Contributors.txt \
    LICENSE.TXT \
    NEWS.txt \
    reposit_vc9.sln \
    rplib_vc9.vcproj \
    README.txt \
    TODO.txt

#.PHONY: docs docs-online docs-dist docs-clean
#BASEPATH = @abs_top_srcdir@
#docs:
#	BASEPATH=$(BASEPATH) $(MAKE) -C Docs docs-all
#html-local:
#	BASEPATH=$(BASEPATH) $(MAKE) -C Docs docs-html
#docs-dist:
#	BASEPATH=$(BASEPATH) $(MAKE) -C Docs docs-dist
#docs-online:
#	BASEPATH=$(BASEPATH) $(MAKE) -C Docs docs-online
#docs-online-dist:
#	BASEPATH=$(BASEPATH) $(MAKE) -C Docs docs-online-dist
#docs-clean:
#	$(MAKE) -C Docs docs-clean

